[tool.poetry]
name = "cyber"
version = "0.1.0"
description = ""
authors = ["PierKnight <45203064+PierKnight@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
typer = "^0.12.5"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
